several my/index improvements; discovered the issue of vanishing oracles

--- a/unifi-templates/header/status.html
+++ b/unifi-templates/header/status.html
@@ -1,12 +1,14 @@
 {% comment %}
+    Enable load static tag for the user image files.
 {% endcomment %}
+
 
 {% block status %}
     {% if user.is_authenticated %}
     <div class="bar">
         <div class="status">
-            <div>You are logged in as <span>{{ user }}</span></div>
-            <a href="/my"><img src="/static/images/users/{{ user.pk }}.png" alt="" /></a>
+            <div><span class="student">{{ user }}</span></div>
+            <a href="/my"><img class="portrait" src="/static/images/users/{{ user.pk }}.png" alt="" /></a>
         </div>
     </div>
     {% endif %}
