fixed oracle issue

--- a/unifi-templates/my/index.html
+++ b/unifi-templates/my/index.html
@@ -62,7 +62,7 @@
         </div>
         {% endfor %}
         <!-- ... -->
-        {% include "group/groups.html" with groups=assistance_groups %}
+        {% include "group/groups.html" %}
     </div>
 
 
