--- a/unifi-templates/group/group.html
+++ b/unifi-templates/group/group.html
@@ -3,8 +3,29 @@
 
 {% block group %}
     <div class="group">
+        {% if controls %}
+        <!-- menu -->
+        <div class="controls">
+            <div class="control" id="inspect">
+                <a href="/my/group/inspect/{{ group.pk }}" title="Undersøk gruppen">
+                    <div class="ui-icon ui-icon-help" style="display: inline-block; overflow: auto;"></div>
+                </a>
+            </div>
+            <div class="control" id="leave">
+                <a href="/my/group/leave/{{ group.pk }}" title="Forlat gruppen">
+                    <div class="ui-icon ui-icon-close" style="display: inline-block; overflow: auto;"></div>
+                </a>
+            </div>
+        </div>
+        <!-- menu -->
+        {% endif %}
+
+
+
         <div class="number">{{ group.pk }}</div>
+        <!-- users -->
         {% include "student/students.html" with students=group.students.all %}
+        <!-- users -->
         {% include "tag/tags.html" with tags=group.tags  %}
     </div>
 {% endblock %}
