--- a/unifi-templates/group/groups.html
+++ b/unifi-templates/group/groups.html
@@ -5,7 +5,7 @@
 
 {% block groups %}
 <div class="groups">
-{% for group in groups %}
+{% for group in groups|dictsort:"pk" %}
     {% include "group/group.html" %}
 {% endfor %}
 </div>
