--- a/unifi-templates/my/index.html
+++ b/unifi-templates/my/index.html
@@ -15,55 +15,56 @@
         {% include "wish/new.html" %}
     </div>
 
+    <div style="100%;">
 
-    <!-- wishes -->
-    <div class="column">
-        <h2>Dine ønsker</h2>
-        {% include "wish/wishes.html" with delete="True" %}
-    </div>
-
-
-    <!-- groups -->
-    <div class="column" id="group">
-        <h2>Dine grupper
-            {% if groups.count == 0 %}
-            <span class="count">ingen</span>
-            {% else %}
-            <span class="count">{{ groups.count }}</span>
-            {% endif %}
-        </h2>
-        <ul>
-            {% for group in groups %}
-            <li>{{ group }}</li>
-            {% endfor %}
-        </ul>
-        <!-- graph drawing -->
-        {% for group in groups %}
-        <div class="graph" id="canvas-{{ group.pk }}">
-            <script>
-                var g = new Graph();
-                {% for student in group.students.all %}
-                g.addEdge( "{{ group.students.all.0 }}", "{{ student }}" );
-                {% endfor %}
-                var layouter = new Graph.Layout.Spring(g);
-                layouter.layout();
-                var renderer = new Graph.Renderer.Raphael(
-                    'canvas-{{ group.pk }}', g, 300, 250
-                );
-                renderer.draw();
-
-            </script>
-            <div class="description">{{ group }}</div>
-            <div class="tag_field">
-                {% for tag in group.tags %}
-                    <span class="tag">{{ tag }}</span>
-                {% endfor %}
-            </div>
+        <!-- wishes -->
+        <div class="column" id="wish">
+            <h2>Dine ønsker
+                {% if wishes|length == 0 %}
+                <span class="count">ingen</span>
+                {% else %}
+                <span class="count">{{ wishes|length }}</span>
+                {% endif %}
+            </h2>
+            {% include "wish/wishes.html" with delete="True" %}
         </div>
-        {% endfor %}
         <!-- ... -->
-        {% include "group/groups.html" %}
-    </div>
+
+
+        <!-- groups -->
+        <div class="column" id="group">
+            <h2>Dine grupper
+                {% if groups|length == 0 %}
+                <span class="count">ingen</span>
+                {% else %}
+                <span class="count">{{ groups|length }}</span>
+                {% endif %}
+            </h2>
+            <!-- graph drawing -->
+            <!--
+            {% for group in groups %}
+            <div class="graph" id="canvas-{{ group.pk }}">
+                <script>
+                    var g = new Graph();
+                    {% for student in group.students.all %}
+                    g.addEdge( "{{ group.students.all.0 }}", "{{ student }}" );
+                    {% endfor %}
+                    var layouter = new Graph.Layout.Spring(g);
+                    layouter.layout();
+                    var renderer = new Graph.Renderer.Raphael(
+                        'canvas-{{ group.pk }}', g, 300, 250
+                    );
+                    renderer.draw();
+                </script>
+            </div>
+            {% endfor %}
+            -->
+            <!-- ... -->
+            {% include "group/groups.html" with controls="True" %}
+        </div>
+        <!-- ... -->
+
+
 
 
     <div class="column" id="oracle">
@@ -88,9 +89,6 @@
         {% endfor %}
         </ul>
         {% include "group/groups.html" with groups=assistance_groups %}
-
-
-
     {% else %}
         <h3>Du har ikke orakelstatus i systemet</h3>
     {% endif %}
