--- a/unifi-templates/prototype/graph.html
+++ b/unifi-templates/prototype/graph.html
@@ -56,8 +56,10 @@
 </div>
 <!-- ... -->
 
+<table>
 {% for element in data.items %}
-    <div>{{ element.1 }} {{ element.0 }}</div>
+<tr><td style="text-align: right;">{{ element.1 }}</td><td>{{ element.0 }}</td></tr>
 {% endfor %}
+</table>
 
 {% include "footer.html" %}
