documentation and CBV changes; preparing /tag/ application to test djangorestfulframework

--- a/unifi-templates/wish/new.html
+++ b/unifi-templates/wish/new.html
@@ -5,9 +5,11 @@
 <div class="new_wish">
 
     <script type="text/javascript">
-        
+
+
+
         $(document).ready(
-            $.get( url='/tag/distribution', dataType='json', success=function( distribution ) {
+            $.get( url='/tag/distribution/?format=json', dataType='json', success=function( distribution ) {
 
                 $( "#mytags" ).tagit( {
                     availableTags: distribution,
