added tag score calculation base

--- a/unifi-templates/wish/wish.html
+++ b/unifi-templates/wish/wish.html
@@ -9,7 +9,7 @@
     <!-- menu -->
     {% if delete %}
     <div class="delete">
-        <a href="./wishes/delete/{{ wish.pk }}" title="Slett dette ønsket">
+        <a href="/student/wish/delete/{{ wish.pk }}" title="Slett dette ønsket">
             <div class="ui-icon ui-icon-trash"
                  style="display: inline-block; overflow: auto;">x
             </div>
