leaving group; minor abstract view changes

--- a/unifi-templates/group/group.html
+++ b/unifi-templates/group/group.html
@@ -7,12 +7,12 @@
         <!-- menu -->
         <div class="controls">
             <div class="control" id="inspect">
-                <a href="/my/group/inspect/{{ group.pk }}" title="Undersøk gruppen">
+                <a href="/group/inspect/{{ group.pk }}" title="Undersøk gruppen">
                     <div class="ui-icon ui-icon-help" style="display: inline-block; overflow: auto;"></div>
                 </a>
             </div>
             <div class="control" id="leave">
-                <a href="/my/group/leave/{{ group.pk }}" title="Forlat gruppen">
+                <a href="/group/leave/{{ group.pk }}" title="Forlat gruppen">
                     <div class="ui-icon ui-icon-close" style="display: inline-block; overflow: auto;"></div>
                 </a>
             </div>
