--- a/unifi-templates/wish/new.html
+++ b/unifi-templates/wish/new.html
@@ -13,7 +13,8 @@
                     availableTags: distribution,
                     allowSpaces: true,
                     fieldName: "tags",
-                    itemName: "user"
+                    itemName: "user",
+                    tabIndex: 1
                 })
             })
         , "json" );
