--- a/unifi-templates/group/group.html
+++ b/unifi-templates/group/group.html
@@ -7,7 +7,7 @@
         <!-- menu -->
         <div class="controls">
             <div class="control" id="inspect">
-                <a href="/group/inspect/{{ group.pk }}" title="Undersøk gruppen">
+                <a href="/group/{{ group.pk }}" title="Undersøk gruppen">
                     <div class="ui-icon ui-icon-help" style="display: inline-block; overflow: auto;"></div>
                 </a>
             </div>
