--- a/unifi-templates/header/import.html
+++ b/unifi-templates/header/import.html
@@ -19,7 +19,7 @@
     <script src="/static/javascripts/jquery.min.js"></script>
     <script src="/static/javascripts/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/javascripts/tag-it.js" type="text/javascript" charset="utf-8"></script>
-
+    <script src="/static/javascripts/modal-popup.js" type="text/javascript" charset="utf-8"></script>
 
     {% if graph %}
     <!-- dracula dependencies -->
