AJAX object manipulation ReSTful style

--- a/unifi-templates/wish/wish.html
+++ b/unifi-templates/wish/wish.html
@@ -9,7 +9,7 @@
 
     <!-- menu -->
     {% if delete %}
-    <div class="delete" pk="{{ wish.pk }}">
+    <div class="delete" model="Wish" pk="{{ wish.pk }}">
         <div class="ui-icon ui-icon-trash" style="display: inline-block; overflow: auto;">x</div>
     </div>
     {% endif %}
