groups allow members to leave restful way
now has the same functionality as the wish

both groups and wishes needed certain generalizations, like for instance they needed to adhere to 'control' class; one may consider other ways to generalize these model controllers restfully, like developing view mixins that do usual API routines like fetching, removing and finding an object by its property

--- a/unifi-templates/group/group.html
+++ b/unifi-templates/group/group.html
@@ -2,30 +2,26 @@
 {% endcomment %}
 
 {% block group %}
-    <div class="group">
-        {% if controls %}
-        <!-- menu -->
-        <div class="controls">
-            <div class="control" id="inspect">
-                <a href="/group/{{ group.pk }}" title="Undersøk gruppen">
-                    <div class="ui-icon ui-icon-help" style="display: inline-block; overflow: auto;"></div>
-                </a>
-            </div>
-            <div class="control" id="leave">
-                <a href="/group/leave/{{ group.pk }}" title="Forlat gruppen">
-                    <div class="ui-icon ui-icon-close" style="display: inline-block; overflow: auto;"></div>
-                </a>
-            </div>
+
+<div class="group" pk="{{ group.pk }}">
+    {% if controls %}
+    <!-- menu -->
+    <div class="controls">
+        <div class="control" id="inspect" pk="{{ group.pk }}">
+            <div class="ui-icon ui-icon-help" style="display: inline-block; overflow: auto;"></div>
         </div>
-        <!-- menu -->
-        {% endif %}
-
-
-
-        <div class="number">{{ group.pk }}</div>
-        <!-- users -->
-        {% include "student/students.html" with students=group.students.all %}
-        <!-- users -->
-        {% include "tag/tags.html" with tags=group.tags  %}
+        <div class="control" id="leave" pk="{{ group.pk }}">
+            <div class="ui-icon ui-icon-close" style="display: inline-block; overflow: auto;"></div>
+        </div>
     </div>
+    <!-- menu -->
+    {% endif %}
+
+    <div class="number">{{ group.pk }}</div>
+    <!-- users -->
+    {% include "student/students.html" with students=group.students.all %}
+    <!-- users -->
+    {% include "tag/tags.html" with tags=group.tags  %}
+</div>
+
 {% endblock %}
