--- a/unifi-templates/wish/wish.html
+++ b/unifi-templates/wish/wish.html
@@ -3,18 +3,18 @@
 
 {% block wish %}
 
-<div class="wish" model="Wish" pk="{{ wish.pk }}">
+<div class="wish" pk="{{ wish.pk }}">
     <div class="tags">
     {% include "tag/tags.html" with tags=wish.tags.all %}
-
     <!-- menu -->
     {% if delete %}
-    <div class="delete" pk="{{ wish.pk }}">
-        <div class="ui-icon ui-icon-trash" style="display: inline-block; overflow: auto;">x</div>
+    <div class="controls">
+        <div class="control" id="delete" pk="{{ wish.pk }}">
+            <div class="ui-icon ui-icon-trash" style="display: inline-block; overflow: auto;">x</div>
+        </div>
     </div>
     {% endif %}
     <!-- menu -->
-
     </div>
 </div>
 {% endblock %}
