adding ordering to model-templates
tags, groups and students templates now display their collection's contents in alphabetic order

--- a/unifi-templates/student/students.html
+++ b/unifi-templates/student/students.html
@@ -3,7 +3,7 @@
 
 {% block students %}
 <div class="students">
-{% for student in students %}
+{% for student in students|dictsort:"username" %}
     {% include "student/student.html" %}
 {% endfor %}
 </div>
