--- a/unifi-templates/group/group.html
+++ b/unifi-templates/group/group.html
@@ -15,12 +15,28 @@
         </div>
     </div>
     <!-- menu -->
+    <div class="float_menu" pk="{{ group.pk }}" style="
+        position: absolute;
+        bottom: 0em;
+        left: 0.75em;
+        background-color: rgba( 0, 0, 0, 0.2 );
+        border-radius: 0.75em 0.75em 0em 0em;
+        -moz-border-radius: 0.75em 0.75em 0em 0em;
+        padding: 0.8em;
+        color: white;
+        width: 80%;
+        font-weight: bold;
+        white-space: nowrap;
+    ">
+        <span class="control" id="leave">Leave</span>
+        <span class="control" id="inspect">Inspect</span>
+    </div>
     {% endif %}
 
     <div class="number">{{ group.pk }}</div>
     <!-- users -->
     {% include "student/students.html" with students=group.students.all %}
-    <!-- users -->
+    <!-- tags -->
     {% include "tag/tags.html" with tags=group.tags  %}
 </div>
 
